Dependencies updated (`Next.js v12`), `styled-components` added, `PostCSS` removed

--- a/package.json
+++ b/package.json
@@ -1,24 +1,26 @@
 {
-	"name": "nextjs-i18n-static-page-starter",
-	"version": "0.1.0",
-	"author": "Marcel Zurreck",
-	"scripts": {
-		"dev": "next dev",
-		"build": "next build",
-		"start": "next start",
-		"export": "next build && next export"
-	},
-	"dependencies": {
-		"i18next": "^19.8.4",
-		"i18next-browser-languagedetector": "^6.0.1",
-		"next": "^10.0.0",
-		"postcss": "^8.1.7",
-		"react": "16.13.1",
-		"react-dom": "16.13.1"
-	},
-	"devDependencies": {
-		"@fullhuman/postcss-purgecss": "^3.0.0",
-		"autoprefixer": "^10.0.4",
-		"tailwindcss": "^2.0.1"
-	}
+  "name": "nextjs-i18n-static-page-starter",
+  "version": "0.1.0",
+  "author": "Marcel Zurreck",
+  "scripts": {
+    "dev": "next dev",
+    "build": "next build",
+    "start": "next start",
+    "export": "next build && next export",
+    "serve": "serve out"
+  },
+  "dependencies": {
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.4",
+    "next": "^12.1.4",
+    "react": "^18.0.0",
+    "react-dom": "^18.0.0",
+    "serve": "^13.0.2",
+    "styled-components": "^5.3.5"
+  },
+  "devDependencies": {
+    "babel-plugin-macros": "^3.1.0",
+    "tailwindcss": "^3.0.23",
+    "twin.macro": "^2.8.2"
+  }
 }
