--- a/package.json
+++ b/package.json
@@ -21,8 +21,9 @@
     "next": "^12.1.4",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-is": "^18.0.0",
     "serve": "^13.0.2",
-    "styled-components": "^5.3.5"
+    "styled-components": "^5.0.0"
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
