--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "next start",
     "export": "next build && next export",
     "serve": "serve out",
-    "standard": "standard"
+    "lint": "standard"
   },
   "dependencies": {
     "i18next": "^21.6.14",
@@ -28,7 +28,7 @@
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
-    "standard": "^16.0.4",
+    "prettier": "2.6.2",
     "tailwindcss": "^3.0.23",
     "twin.macro": "^2.8.2"
   }
