--- a/package.json
+++ b/package.json
@@ -14,7 +14,7 @@
     "start": "next start",
     "export": "next build && next export",
     "serve": "serve out",
-    "lint": "standard"
+    "lint": "next lint"
   },
   "dependencies": {
     "i18next": "^21.6.14",
@@ -28,6 +28,8 @@
   },
   "devDependencies": {
     "babel-plugin-macros": "^3.1.0",
+    "eslint": "^8.13.0",
+    "eslint-config-next": "^12.1.4",
     "prettier": "2.6.2",
     "tailwindcss": "^3.0.23",
     "twin.macro": "^2.8.2"
